Refactor authentication and OTP services for improved readability and functionality