@@ -22,8 +22,7 @@ public class DeduplicatingOtpRateLimiter {
 
     public DeduplicatingOtpRateLimiter(OtpRateLimiter delegate) {
         this.delegate = delegate;
-        this.rlExecutor = Executors.newFixedThreadPool(16,
-                new ThreadFactoryBuilder().setNameFormat("otp-rl-%d").build());
+        this.rlExecutor = Executors.newVirtualThreadPerTaskExecutor();
         this.requestCache = Caffeine.newBuilder()
                 .maximumSize(1000)
                 .expireAfterWrite(200, TimeUnit.MILLISECONDS)
